force-app/main/default/objects/CC_App_Gallery_Token__mdt/CC_App_Gallery_Token__mdt.object-meta.xml
<CustomObject>
    <label>App Gallery Token</label>
    <pluralLabel>Apps Gallery Token</pluralLabel>
</CustomObject>