force-app/main/default/objects/CC_App_Gallery_Token__mdt/fields/CC_AppId__c.field-meta.xml
<CustomField>
    <fullName>CC_AppId__c</fullName>
    <label>AppId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>