force-app/main/default/objects/CC_App_Gallery_Token__mdt/fields/CC_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>CC_Client_Id__c</fullName>
    <label>Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>