force-app/main/default/objects/CC_App_Gallery_Token__mdt/fields/CC_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>CC_Endpoint__c</fullName>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>